include/decentdb.h

typedef uint32_t ddb_status_t;
typedef struct ddb_db_handle ddb_db_t;
typedef struct ddb_result_handle ddb_result_t;
typedef struct ddb_stmt_handle ddb_stmt_t;
typedef struct ddb_value_t {
  uint32_t tag;
  uint8_t bool_value;
  uint8_t reserved0[7];
  int64_t int64_value;
  double float64_value;
  int64_t decimal_scaled;
  uint8_t decimal_scale;
  uint8_t reserved1[7];
  uint8_t *data;
  size_t len;
  uint8_t uuid_bytes[16];
  int64_t timestamp_micros;
  uint64_t enum_type_id;
  uint64_t enum_label_id;
  uint8_t ip_family;
  uint8_t cidr_prefix_len;
  uint8_t reserved2[6];
  uint8_t ip_cidr_addr_bytes[16];
  int32_t date_days;
  int64_t time_micros;
  int64_t timestamptz_micros;
  int32_t interval_months;
  int32_t interval_days;
  int64_t interval_micros;
} ddb_value_t;
/* Borrowed pointer valid until the next DecentDB call on the same thread. */
uint32_t ddb_abi_version(void);
const char *ddb_version(void);
const char *ddb_last_error_message(void);
ddb_status_t ddb_value_dispose(ddb_value_t *value);
/*
 * Frees a string previously returned by this API.
 * Call ddb_string_free exactly once for each successful string-returning call.
 * Failing to free the string leaks that allocation until process exit.
 * Do not call ddb_string_free concurrently from multiple threads on the same pointer.
 */
ddb_status_t ddb_string_free(char **value);
/*
 * On success, ownership of the returned database handle transfers to the caller.
 * Call ddb_db_free exactly once for each successful create/open/open_or_create call.
 * The handle retains references to internal database state; failing to free it leaks that state
 * until process exit.
 * Do not call ddb_db_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_create(const char *path, ddb_db_t **out_db);
ddb_status_t ddb_db_open(const char *path, ddb_db_t **out_db);
ddb_status_t ddb_db_open_or_create(const char *path, ddb_db_t **out_db);
/*
 * Frees a database handle returned by ddb_db_create, ddb_db_open, or ddb_db_open_or_create.
 * Call ddb_db_free exactly once for each successful handle-creating call.
 * Failing to free the handle leaks internal database state until process exit.
 * Do not call ddb_db_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_free(ddb_db_t **db);
/*
 * Frees a statement handle returned by ddb_db_prepare.
 * Call ddb_stmt_free exactly once for each successful ddb_db_prepare call.
 * Failing to free the handle leaks retained database state until process exit.
 * Do not call ddb_stmt_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_stmt_free(ddb_stmt_t **stmt);
ddb_status_t ddb_stmt_reset(ddb_stmt_t *stmt);
ddb_status_t ddb_stmt_clear_bindings(ddb_stmt_t *stmt);
ddb_status_t ddb_stmt_step(ddb_stmt_t *stmt, uint8_t *out_has_row);
ddb_status_t ddb_stmt_column_count(ddb_stmt_t *stmt, size_t *out_columns);
ddb_status_t ddb_stmt_column_name_copy(
    ddb_stmt_t *stmt,
    size_t column_index,
    char **out_name);
ddb_status_t ddb_stmt_affected_rows(ddb_stmt_t *stmt, uint64_t *out_rows);
/*
 * Performance note: for read-heavy workloads, prefer ddb_stmt_*_row_view
 * functions, which return borrowed pointers into the result set without heap
 * allocation. Use ddb_*_value_copy functions when ownership transfer is
 * required.
 */
ddb_status_t ddb_stmt_value_copy(
    ddb_stmt_t *stmt,
    size_t column_index,
    ddb_value_t *out_value);
/*
 * On success, ownership of the returned result handle transfers to the caller.
 * Call ddb_result_free exactly once for each successful ddb_db_execute call.
 * The handle retains references to internal database state; failing to free it leaks that state
 * until process exit.
 * Do not call ddb_result_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_execute(
    ddb_db_t *db,
    const char *sql,
    const ddb_value_t *params,
    size_t params_len,
    ddb_result_t **out_result);
ddb_status_t ddb_db_checkpoint(ddb_db_t *db);
ddb_status_t ddb_db_begin_transaction(ddb_db_t *db);
ddb_status_t ddb_db_commit_transaction(ddb_db_t *db, uint64_t *out_lsn);
ddb_status_t ddb_db_rollback_transaction(ddb_db_t *db);
ddb_status_t ddb_db_in_transaction(ddb_db_t *db, uint8_t *out_flag);
ddb_status_t ddb_db_save_as(ddb_db_t *db, const char *dest_path);
ddb_status_t ddb_db_list_tables_json(ddb_db_t *db, char **out_json);
ddb_status_t ddb_db_get_table_ddl(ddb_db_t *db, const char *name, char **out_ddl);
ddb_status_t ddb_db_list_indexes_json(ddb_db_t *db, char **out_json);
ddb_status_t ddb_db_list_views_json(ddb_db_t *db, char **out_json);
ddb_status_t ddb_db_get_view_ddl(ddb_db_t *db, const char *name, char **out_ddl);
ddb_status_t ddb_db_list_triggers_json(ddb_db_t *db, char **out_json);
/*
 * Frees a result handle returned by ddb_db_execute.
 * Call ddb_result_free exactly once for each successful ddb_db_execute call.
 * Failing to free the handle leaks retained database state until process exit.
 * Do not call ddb_result_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_result_free(ddb_result_t **result);
ddb_status_t ddb_result_row_count(ddb_result_t *result, size_t *out_rows);
ddb_status_t ddb_result_column_count(ddb_result_t *result, size_t *out_columns);
ddb_status_t ddb_result_affected_rows(ddb_result_t *result, uint64_t *out_rows);
ddb_status_t ddb_result_column_name_copy(
    ddb_result_t *result,
    size_t column_index,
    char **out_name);
/*
 * Performance note: ddb_result_value_copy returns owned values and may allocate
 * per cell. For streaming read-heavy paths, prefer statement row-view APIs.
 */
ddb_status_t ddb_result_value_copy(
    ddb_result_t *result,
    size_t row_index,
    size_t column_index,
    ddb_value_t *out_value);